--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,16 @@
   <noscript>Você precisa ativar o JavaScript para visualizar esta página.</noscript>
   <div id="app"></div>
   <div id="modal-root"></div>
+  <!-- Ybug code start (https://ybug.io) -->
+<script type='text/javascript'>
+  (function() {
+      window.ybug_settings = {"id":"cky5z4qhkv3bjt55yb6z", hide_launcher: true};
+      var ybug = document.createElement('script'); ybug.type = 'text/javascript'; ybug.async = true;
+      ybug.src = 'https://widget.ybug.io/button/'+window.ybug_settings.id+'.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ybug, s);
+  })();
+  </script>
+  <!-- Ybug code end -->
 </body>
 
 </html>
